@@ -47,7 +47,7 @@ struct sockaddr_storage {
 
 #include <asm/socket.h>			/* arch-dependent defines	*/
 #include <cygwin/sockios.h>		/* the SIOCxxx I/O controls	*/
-#include <cygwin/uio.h>			/* iovec support		*/
+#include <sys/uio.h>			/* iovec support		*/
 #include <sys/types.h>
 
 struct ucred {
@@ -152,7 +152,9 @@ struct OLD_msghdr
 #define AF_HYLINK       15              /* NSC Hyperchannel */
 #define AF_APPLETALK    16              /* AppleTalk */
 #define AF_NETBIOS      17              /* NetBios-style addresses */
+#if 0					/* Not yet */
 #define AF_INET6        23              /* IP version 6 */
+#endif
 
 #define AF_MAX          32
 /*
@@ -178,7 +180,9 @@ struct OLD_msghdr
 #define PF_HYLINK       AF_HYLINK
 #define PF_APPLETALK    AF_APPLETALK
 #define PF_NETBIOS      AF_NETBIOS
+#if 0
 #define PF_INET6        AF_INET6
+#endif
 
 #define PF_MAX          AF_MAX
 
@@ -231,17 +235,6 @@ struct OLD_msghdr
 #define IP_BLOCK_SOURCE                 17
 #define IP_UNBLOCK_SOURCE               18
 #define IP_PKTINFO                      19
-
-/* IPv6 options for use with getsockopt/setsockopt */
-#define IPV6_UNICAST_HOPS                4
-#define IPV6_MULTICAST_IF                9
-#define IPV6_MULTICAST_HOPS             10
-#define IPV6_MULTICAST_LOOP             11
-#define IPV6_ADD_MEMBERSHIP             12
-#define IPV6_DROP_MEMBERSHIP            13
-#define IPV6_JOIN_GROUP                 IPV6_ADD_MEMBERSHIP
-#define IPV6_LEAVE_GROUP                IPV6_DROP_MEMBERSHIP
-#define IPV6_PKTINFO                    19
 
 /* Old WinSock1 values, needed internally */
 #ifdef __INSIDE_CYGWIN__
